<resources>
    <string name="RP_to_chat">РП</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Принять</string>
    <string name="action">Действия</string>
    <string name="actually_version">Актуальная версия</string>
    <string name="all">Все</string>
    <string name="all_list">ВЕсь список</string>
    <string name="already_registered">Уже зарегистрированы?</string>
    <string name="androidx_compose_foundation_autofill">Autofill</string>
    <string name="androidx_compose_ui_autofill">Autofill</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="another_variant">Другой вариант</string>
    <string name="apartment">квартира</string>
    <string name="app_name">ARIZONA MOD</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arizona_mini_game_search_document_description_txt">Найдите налоговые документы в конвертах</string>
    <string name="arizona_mini_game_search_document_title_txt">Поиск документов</string>
    <string name="arizona_rent">"ARIZONA
RENT"</string>
    <string name="authorization">Авторизация</string>
    <string name="available">Доступно до 3 уровня</string>
    <string name="available_out_of">Доступно %1$d/%2$d</string>
    <string name="back_keyboard">Клавиатура</string>
    <string name="binder_text">Биндер команд</string>
    <string name="bonus">- бонус</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="bp">battlepass</string>
    <string name="bp_completed">Батл-пасс пройден</string>
    <string name="buy">Купить</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Отклонить</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_files">Check files</string>
    <string name="check_game">Проверка файлов игры</string>
    <string name="check_update">Check update</string>
    <string name="choose_color">выберите цвет</string>
    <string name="choose_format">Выберите формат</string>
    <string name="choose_real_estate">Выберите недвижимось</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="client_check">ПОЧИНИТЬ</string>
    <string name="close">Закрыть</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="close_txt">Закрыто</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">00000000000000000000000000000000</string>
    <string name="com.google.firebase.crashlytics.version_control_info">"repositories {
  system: GIT
  local_root_path: \"$PROJECT_DIR\"
  revision: \"fe9835eb14dc7ee6f65a8fcd6bcc8e4ee78272c1\"
}
"</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="connect">Connect</string>
    <string name="connecting_game">Подключение к игре...</string>
    <string name="continue_str">Продолжить</string>
    <string name="copy">Copy</string>
    <string name="copyright_arizona_mobile">Copyright © Arizona Mobile</string>
    <string name="corrupted_files_found">Удалены временные и поврежденные файлы</string>
    <string name="cost">стоимость</string>
    <string name="cost_days">Стоимость в сутки</string>
    <string name="cost_hours">Стоимость за час</string>
    <string name="create_ad">Создать объявление</string>
    <string name="currency_not_found">Currency not found</string>
    <string name="current_android_version">Текущая версия Android</string>
    <string name="current_version">Текущая версия</string>
    <string name="customize_character">Настройте своего персонажа</string>
    <string name="debug">debug</string>
    <string name="default_error_message">Invalid input</string>
    <string name="default_number">0</string>
    <string name="default_open_error">Не удалось открыть приложение</string>
    <string name="default_percent_value">0%</string>
    <string name="default_ping">Ping: 999</string>
    <string name="default_popup_window_title">Pop-Up Window</string>
    <string name="default_server_address">Address: 90.170.76.34:7777</string>
    <string name="default_server_mode">Mode: Arizona Mobile</string>
    <string name="default_server_name">Axwell World</string>
    <string name="default_server_player_count">1000/1000</string>
    <string name="default_update_percent">30%</string>
    <string name="default_user_name">Maks_Mironow (999)</string>
    <string name="default_web_client_id">551532909837-v18n6loavv3j8lm9f93unfn6li0vrabg.apps.googleusercontent.com</string>
    <string name="desc">Описание</string>
    <string name="description">Играйте в любимые проекты в любой точке мира на своём мобильном устройстве</string>
    <string name="dest_title">destination title</string>
    <string name="dont_have_account">У вас нет аккаунта?</string>
    <string name="dropdown_menu">Dropdown menu</string>
    <string name="email">Почта</string>
    <string name="email_not_necessary">Email(Не обязательно)</string>
    <string name="employment">Трудоустройство</string>
    <string name="employment_history">Трудовая книжка</string>
    <string name="enter">Войти</string>
    <string name="enter_mail">Введите e-mail</string>
    <string name="error">Ошибка</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_available_to_50">Допустимо до 50млн</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_incorrect_format">Некорректный формат</string>
    <string name="error_input_form">Заполните форму</string>
    <string name="error_message_auth">Authorization error</string>
    <string name="error_message_unknown_with_code">An error occurred (code: %1$s)</string>
    <string name="example_mail">vice_2099@mail.ru</string>
    <string name="exchange_rate">Курс обмена</string>
    <string name="exit">Выйти</string>
    <string name="exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="mail_sent">Новый пароль уже выслан на вашу почту, проверьте спам, если не можете найти его</string>
    <string name="my">мои</string>
    <string name="not_ads_desc">В данный момент никто не сдает недвижимость, заходите позже или создайте свое объявление!</string>
    <string name="not_arrived">Письмо не пришло?</string>
    <string name="nothing_not">Упс... ничего нет</string>
    <string name="password_reset">Сброс пароля</string>
    <string name="progress">прогресс</string>
    <string name="recording">"Запись 
сигнала"</string>
    <string name="send_again">Отправить повторно</string>
    <string name="sign_in">Войти в аккаунт</string>
    <string name="time_format">10:00</string>
    <string name="update">Обновление</string>
</resources>