<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@id/account_recovery_final"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@id/auth_background"
        android:background="@drawable/authorization_bg"
        android:layout_width="350.0dip"
        android:layout_height="fill_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:textSize="16.0dip"
            android:textColor="@color/white"
            android:id="@id/account_recovery_final_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35.0dip"
            android:text="@string/password_reset"
            android:fontFamily="@font/pfdregular"
            android:textFontWeight="500"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@id/account_recovery_final_info_container"
            android:background="@drawable/authorization_server_border"
            android:layout_width="300.0dip"
            android:layout_height="50.0dip"
            android:layout_marginTop="20.0dip"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_recovery_final_title">
            <TextView
                android:textSize="14.0dip"
                android:textColor="@color/white"
                android:gravity="center"
                android:id="@id/account_recovery_description"
                android:layout_width="260.0dip"
                android:layout_height="wrap_content"
                android:text="@string/mail_sent"
                android:fontFamily="@font/pfdregular"
                android:textFontWeight="500"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@id/account_recovery_final_mail_container"
            android:background="@drawable/authorization_border"
            android:layout_width="300.0dip"
            android:layout_height="50.0dip"
            android:layout_marginTop="15.0dip"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_recovery_final_info_container">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@id/account_recovery_final_icon"
                android:layout_width="20.0dip"
                android:layout_height="20.0dip"
                android:layout_marginLeft="10.0dip"
                android:src="@drawable/mail_ic"
                android:tint="#ff7e7e7e"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:textSize="18.0dip"
                android:textColor="#ff979797"
                android:id="@id/account_recovery_final_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6.0dip"
                android:text="@string/example_mail"
                android:fontFamily="@font/heading_now_64_regular"
                android:textFontWeight="400"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/account_recovery_final_icon"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@id/account_recovery_final_login_button"
            android:background="@drawable/authorization_border_red"
            android:layout_width="300.0dip"
            android:layout_height="40.0dip"
            android:layout_marginTop="25.0dip"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_recovery_final_mail_container">
            <TextView
                android:textSize="16.0dip"
                android:textColor="@color/white"
                android:id="@id/account_recovery_final_login_button_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6.0dip"
                android:text="@string/sign_in"
                android:fontFamily="@font/heading_now_64_regular"
                android:textFontWeight="400"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@id/account_recovery_final_exist_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.0dip"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_recovery_final_login_button">
            <TextView
                android:textSize="18.0dip"
                android:textColor="#ff979797"
                android:id="@id/account_recovery_final_is_exist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2.0dip"
                android:text="@string/not_arrived"
                android:fontFamily="@font/heading_now_64_regular"
                android:textFontWeight="400"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/account_recovery_final_reply_button"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:textSize="18.0dip"
                android:textColor="#ffff2323"
                android:id="@id/account_recovery_final_reply_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2.0dip"
                android:text="@string/send_again"
                android:fontFamily="@font/heading_now_64_regular"
                android:textFontWeight="400"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/account_recovery_final_is_exist"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>