<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:orientation="vertical"
    android:id="@id/arizona_rent_page"
    android:layout_width="160.0dip"
    android:layout_height="300.0dip"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <include
            android:id="@id/top_bar"
            layout="@layout/mp_arizona_rent_top_bar" />
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_marginHorizontal="@dimen/_8sdp">
            <LinearLayout
                android:orientation="vertical"
                android:id="@id/ad_container"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="@dimen/_6sdp">
                <LinearLayout
                    android:id="@id/toolbar"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/_20sdp">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_weight="1.0">
                        <ru.mrlargha.commonui.utils.ui.CustomCardView
                            android:id="@id/toolbar_all"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="1.0"
                            app:backgroundMainColor="@color/white"
                            app:cornerBottomLeft="@dimen/_4sdp"
                            app:cornerTopLeft="@dimen/_4sdp">
                            <TextView
                                android:textSize="@dimen/_6sdp"
                                android:textColor="#e5000000"
                                android:layout_gravity="center"
                                android:id="@id/tv_all"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/all"
                                android:textAllCaps="true"
                                android:fontFamily="@font/heading_now_65" />
                        </ru.mrlargha.commonui.utils.ui.CustomCardView>
                        <ru.mrlargha.commonui.utils.ui.CustomCardView
                            android:id="@id/toolbar_my"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="1.0"
                            app:backgroundMainColor="#ff252525"
                            app:cornerBottomRight="@dimen/_4sdp"
                            app:cornerTopRight="@dimen/_4sdp">
                            <TextView
                                android:textSize="@dimen/_6sdp"
                                android:textColor="#b2ffffff"
                                android:layout_gravity="center"
                                android:id="@id/tv_my"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/my"
                                android:textAllCaps="true"
                                android:fontFamily="@font/heading_now_65" />
                        </ru.mrlargha.commonui.utils.ui.CustomCardView>
                    </LinearLayout>
                    <ru.mrlargha.commonui.utils.ui.CustomCardView
                        android:id="@id/btn_filter"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="fill_parent"
                        android:layout_marginStart="@dimen/_4sdp"
                        app:backgroundMainColor="#ff252525"
                        app:borderMainColor="#0dffffff"
                        app:borderWidth="@dimen/_1sdp"
                        app:corners="@dimen/_4sdp">
                        <ImageView
                            android:layout_gravity="center"
                            android:id="@id/iv_filter"
                            android:layout_width="@dimen/_8sdp"
                            android:layout_height="@dimen/_8sdp"
                            android:src="@drawable/mp_filter_ic"
                            android:alpha="0.5" />
                    </ru.mrlargha.commonui.utils.ui.CustomCardView>
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@id/rv_ad"
                    android:visibility="visible"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="@dimen/_4sdp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </LinearLayout>
            <FrameLayout
                android:id="@id/nothing_not_container"
                android:visibility="gone"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <LinearLayout
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="@dimen/_28sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="🥲" />
                    <TextView
                        android:textSize="@dimen/_10sdp"
                        android:textColor="#ffffffff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:text="@string/nothing_not"
                        android:fontFamily="@font/heading_now_65" />
                    <TextView
                        android:textSize="@dimen/_6sdp"
                        android:textColor="#b2ffffff"
                        android:gravity="center"
                        android:id="@id/tv_not_content_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/not_ads_desc"
                        android:fontFamily="@font/heading_64" />
                </LinearLayout>
                <ru.mrlargha.commonui.utils.ui.CustomCardView
                    android:layout_gravity="bottom"
                    android:id="@id/btn_create_ad"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    app:backgroundMainColor="#ff2857f4"
                    app:backgroundSecondColor="#ff6cd0fa"
                    app:corners="@dimen/_4sdp"
                    app:gradientAngle="30">
                    <TextView
                        android:textSize="@dimen/_6sdp"
                        android:textColor="#e5000000"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_ad"
                        android:textAllCaps="true"
                        android:fontFamily="@font/heading_now_66_bold" />
                </ru.mrlargha.commonui.utils.ui.CustomCardView>
            </FrameLayout>
            <ProgressBar
                android:layout_gravity="center"
                android:id="@id/progress_bar"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="#99ffffff" />
        </FrameLayout>
    </LinearLayout>
    <View
        android:id="@id/foreground"
        android:background="#80000000"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_4sdp"
        android:layout_marginHorizontal="@dimen/_4sdp" />
    <include
        android:layout_gravity="bottom"
        android:id="@id/filter_container"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_4sdp"
        android:layout_marginRight="@dimen/_4sdp"
        android:layout_marginHorizontal="@dimen/_4sdp"
        layout="@layout/mp_arizona_rent_filter" />
    <ru.mrlargha.commonui.utils.ui.CustomCardView
        android:layout_gravity="center_horizontal"
        android:id="@id/btn_update"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_58sdp"
        android:paddingHorizontal="@dimen/_20sdp"
        app:backgroundMainColor="#ff2857f4"
        app:backgroundSecondColor="#ff6cd0fa"
        app:corners="@dimen/_100sdp">
        <TextView
            android:textSize="@dimen/_6sdp"
            android:textColor="#e5000000"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textAllCaps="true"
            android:fontFamily="@font/heading_now_66_bold" />
    </ru.mrlargha.commonui.utils.ui.CustomCardView>
</FrameLayout>